# RegisClaudeMaster

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DOKUMENTACJA_TECHNICZNA.md  README.md  dev-server.mjs  index.html  mock-api.cjs  openapi.yaml  package-lock.json  package.json  start-regis-node25.bat  tailwind.config.js  test-report.json  vercel.json  vite.config.ts
api/: Cargo.toml  cache-admin.ts  cors.ts  execute.ts  handler.rs  health.ts  logger.ts  logs.ts  metrics-dashboard.ts  metrics.ts  models.ts  provider-admin.ts  providers.ts  stream.ts
api/_lib/middleware/: auth-utils.ts  circuit-breaker.ts  cors.ts  dedup.ts  rate-limit.ts
api/_lib/services/: alerts.ts  audit.ts  cache.ts  grounding.ts  metrics.ts  provider-config.ts  provider-health.ts  providers.ts
api/_lib/utils/: errors.ts  logger.ts
api/auth/: login.ts  logout.ts  refresh.ts
docs/: PIPELINE.md
playwright-report/: index.html
src/: App.tsx  main.tsx  vite-env.d.ts
src/components/: ChatInterface.tsx  PipelineStatus.tsx  ResearchStatus.tsx
src/components/common/: ErrorBoundary.tsx  ErrorDisplay.tsx  FeedbackButton.tsx  OfflineIndicator.tsx  ProgressIndicator.tsx
src/hooks/: useChatState.ts  usePipeline.ts
src/i18n/: index.ts
src/lib/: ai-pipeline.ts  ai-providers-store.ts  ai-providers.ts  api-client.ts  error-handler.ts  health.ts  models-store.ts  models.ts  preferences-store.ts  storage.ts  types.ts  useChat.ts  utils.ts
src/styles/: globals.css
tests/: app.spec.ts  mobile-test.spec.ts  tablet-test.spec.ts  typescript-test.spec.ts
(+18 files in other folders)
