[package]
name = "regis-claude-master"
version = "0.1.0"
edition = "2021"
description = "Rust serverless function for Regis Claude Master"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
vercel_runtime = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"
anyhow = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
